feat: added swagger doc to 'product/{id}' put route
