# src/swagger.json
@@ -19,7 +19,7 @@
         "/product": {
             "post": {
                 "summary": "Cadastro de produto",
-                "description": "Rota responsável por cadastrar um novo produto",
+                "description": "Cadastro de produto",
                 "tags": ["Products"],
                 "security": [{ "bearerAuth": [] }],
                 "requestBody": {
@@ -105,6 +105,57 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "type": "object",
+                                "schema": {
+                                    "$ref": "#/components/schemas/Product"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Altera os dados de um produto pelo productId",
+                "summary": "Altera os dados de um produto pelo productId",
+                "tags": ["Products"],
+                "security": [{ "bearerAuth": [] }],
+                "parameters": [
+                    {
+                        "name": "productId",
+                        "in": "path",
+                        "description": "Id do produto",
+                        "required": true
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Product"
+                            },
+                            "examples": {
+                                "product": {
+                                    "value": {
+                                        "name": "Mouse USB sem fio",
+                                        "description": "Mouse USB RGB sem fio",
+                                        "price": 450
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "401": {
+                        "description": "User unauthorized"
+                    },
+                    "404": {
+                        "description": "Product not found"
+                    },
                     "200": {
                         "description": "OK",
                         "content": {
